--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,4 @@
-<p routerLink="/home" class="link" routerLinkActive="onPage">Page d'accueil</p>
-<p routerLink="/about" class="link" routerLinkActive="onPage">Page about</p>
+<header>
+    <button routerLink="/home" class="btn-primary" routerLinkActive="btnOnClick">Page d'accueil</button>
+    <button routerLink="/about" class="btn-primary" routerLinkActive="btnOnClick">Page About</button>
+</header>
