--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -7,4 +7,23 @@
 .onPage {
     color: red;
 }
+
+.btn-primary {
+    background-color: #000000;
+    border-color: #000000;
+    color: white;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.btn-primary:hover {
+    background-color: white;
+    border-color: black;
+    color: black;
+    border-radius: 10px;
+}
+
+.btnOnClick{
+ opacity: 0.6;
+}
   
