liste de taches etc

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,14 @@
-<p>Voici mon component Home</p>
+<h2>Liste de tâches</h2>
+
+@if (tasks$ | async; as tasks) {
+  <ul>
+    @for(t of tasks; track t.id) {
+      <li>{{ t.title }}</li>
+    }
+  </ul>
+} @else {
+  <p>Chargement des tâches...</p>
+}
+
+<p> Temps écoulé : {{ count/2 }} secondes</p>
+
