--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,5 +10,11 @@
   <p>Chargement des tâches...</p>
 }
 
-<p> Temps écoulé : {{ count/2 }} secondes</p>
 
+<hr />
+
+<h3>Actions</h3>
+
+<button (click)="addTask('Nouvelle tâche')">
+  Ajouter une tâche
+</button>
