--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<header>
-    <button routerLink="/home" class="btn-primary" routerLinkActive="btnOnClick">Page d'accueil</button>
-    <button routerLink="/about" class="btn-primary" routerLinkActive="btnOnClick">Page About</button>
-</header>
+ <header class="header">
+    <p>Cours - Angular</p>
+    <button routerLink="" class="btn-primary">Page d'accueil</button>
+    <button routerLink="/about" class="btn-primary">Page About</button>
+  </header>
+  
