--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,4 @@
-<h2>Liste de tâches</h2>
+<h1>Accueil</h1>
 
-@if (tasks$ | async; as tasks) {
-  <ul>
-    @for(t of tasks; track t.id) {
-      <li>{{ t.title }}</li>
-    }
-  </ul>
-} @else {
-  <p>Chargement des tâches...</p>
-}
-
-
-<hr />
-
-<h3>Actions</h3>
-
-<button (click)="addTask('Nouvelle tâche')">
-  Ajouter une tâche
-</button>
+<h2>Accéder aux tâches :</h2>
+<button routerLink="/tasks" class="btn-primary">Tâches</button>
