--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,19 +1,29 @@
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+    background-color: #f5f5f5;
+    padding: 15px 0;
+}
+
 .btn-primary {
     background-color: #000000;
     border-color: #000000;
     color: white;
     border-radius: 10px;
     padding: 10px 20px;
+    cursor: pointer;
+    transition: all 0.25s;
 }
 
 .btn-primary:hover {
     background-color: white;
     border-color: black;
     color: black;
-    border-radius: 10px;
 }
 
-.btnOnClick{
- opacity: 0.6;
+.btnOnClick {
+    opacity: 0.6;
 }
-  
