changement syle + readme

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,15 @@
-<p>Voici mon component about</p>
+<section class="about">
+    <h1>À propos</h1>
+  
+    <p>
+      Cette application est un petit projet Angular utilisé pour apprendre :
+    </p>
+  
+    <ul>
+      <li>la navigation avec le router,</li>
+      <li>les services et l’injection de dépendances,</li>
+      <li>les Observables et BehaviorSubject,</li>
+      <li>et un peu de mise en forme en CSS.</li>
+    </ul>
+  </section>
+  
