--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
- <header class="header">
-    <p>Cours - Angular</p>
-    <button routerLink="" class="btn-primary">Page d'accueil</button>
-    <button routerLink="/about" class="btn-primary">Page About</button>
-  </header>
-  
+<header class="header">
+  <div class="header-title">Cours - Angular</div>
+
+  <nav class="header-nav">
+    <button routerLink="" class="btn-primary">Accueil</button>
+    <button routerLink="/about" class="btn-primary">À propos</button>
+  </nav>
+</header>
