--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,14 @@
-<h1>Accueil</h1>
-
-<h2>Accéder aux tâches :</h2>
-<button routerLink="/tasks" class="btn-primary">Tâches</button>
+<section class="home">
+    <h1>Accueil</h1>
+  
+    <p class="home-subtitle">
+      Bienvenue sur le mini projet Angular.
+    </p>
+  
+    <h2>Accéder aux tâches :</h2>
+  
+    <button routerLink="/tasks" class="btn-primary">
+      Voir les tâches
+    </button>
+  </section>
+  
