--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+
+<main class="page-container">
+  <router-outlet></router-outlet>
+</main>
+
+<app-footer></app-footer>
