--- a/src/app/features/tasks/tasks-page/tasks-page.component.html
+++ b/src/app/features/tasks/tasks-page/tasks-page.component.html
@@ -1,7 +1,7 @@
 <h2>Liste de tâches</h2>
 
 @if (tasks$ | async; as tasks) {
-  <ul>
+  <ul class="task-list">
     @for(t of tasks; track t.id) {
       <li>{{ t.title }}</li>
     }
@@ -10,11 +10,10 @@
   <p>Chargement des tâches...</p>
 }
 
-
 <hr />
 
 <h3>Actions</h3>
 
-<button (click)="addTask('Nouvelle tâche')">
+<button (click)="addTask('Nouvelle tâche')" class="btn-primary">
   Ajouter une tâche
 </button>
