--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,6 +4,7 @@
     color: white;
     border-radius: 10px;
     padding: 10px 20px;
+    width: 20vh;
 }
 
 .btn-primary:hover {
@@ -15,4 +16,11 @@
 .btnOnClick{
  opacity: 0.6;
 }
+
+.home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.75rem;
+  }
   
