--- a/src/app/features/tasks/tasks-page/tasks-page.component.html
+++ b/src/app/features/tasks/tasks-page/tasks-page.component.html
@@ -4,6 +4,10 @@
   <ul class="task-list">
     @for(t of tasks; track t.id) {
       <li>{{ t.title }}</li>
+      <button type="button" (click)="highlight(t)" class="btn-primary">
+        Mettre en avant
+      </button>
+      <button type="button" (click)="deleteTask(t.id)" class="btn-danger"> Supprimer </button>
     }
   </ul>
 } @else {
@@ -14,6 +18,11 @@
 
 <h3>Actions</h3>
 
-<button (click)="addTask('Nouvelle tâche')" class="btn-primary">
+<input type="text" #taskInput placeholder="Titre de la tâche" (keyup.enter)="addTask(taskInput)" />
+
+<button (click)="addTask(taskInput)" class="btn-primary">
   Ajouter une tâche
 </button>
+
+<!-- Zone d'injection du composant dynamique -->
+<div #highlightContainer></div>
