ajout exo bonus "tâches terminées"

--- a/src/app/features/tasks/tasks-page/tasks-page.component.html
+++ b/src/app/features/tasks/tasks-page/tasks-page.component.html
@@ -8,11 +8,21 @@
         Mettre en avant
       </button>
       <button type="button" (click)="deleteTask(t.id)" class="btn-danger"> Supprimer </button>
+      <button type="button" (click)="taskCompleted(t)" class="primary"> Terminé </button>
     }
   </ul>
 } @else {
   <p>Chargement des tâches...</p>
 }
+
+<h3> Tâches terminées</h3>
+<ul class="task-list">
+  @for (t of tasks$ | async; track t.id) {
+    @if (t.completed != false ) {
+      <li [class.completed]="t.completed">{{ t.title }}</li>
+    }
+  }
+</ul>
 
 <hr />
 
